--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "formik": "^2.2.9",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
     "material-ui-confirm": "^3.0.9",
     "moment": "^2.29.4",
