--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/x-data-grid": "^6.11.0",
     "@mui/x-date-pickers": "^5.0.5",
     "@reduxjs/toolkit": "^1.9.7",
+    "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -59,6 +60,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "sockjs-client": "^1.6.1",
     "styled-components": "^5.3.6",
     "sweetalert2": "^11.7.20",
     "web-vitals": "^2.1.0",
