--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dayjs": "^1.11.9",
     "dotenv": "^16.4.5",
     "env-cmd": "^10.1.0",
+    "events": "^3.3.0",
     "formik": "^2.2.9",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
