--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.4.0",
     "body-scroll-lock": "^4.0.0-beta.0",
     "dayjs": "^1.11.9",
+    "dot-env": "^0.0.1",
     "dotenv": "^16.4.5",
     "env-cmd": "^10.1.0",
     "events": "^3.3.0",
