--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "copyversion": "copy description.txt build\\",
     "predeploy:uat": "npm version patch && yarn update-readme && yarn run build:uat && yarn copy && yarn paste && yarn cut && yarn copyversion && yarn rename && yarn zip",
     "predeploy:testing": "npm version patch && yarn update-readme && yarn run build:testing && yarn copy && yarn paste && yarn cut && yarn copyversion && yarn rename && yarn zip",
+    "predeploy:local": "npm version patch && yarn update-readme && yarn run build:local && yarn copy && yarn paste && yarn cut && yarn copyversion && yarn rename && yarn zip",
     "predeploy:vapt": "npm version patch && yarn update-readme && yarn run build:vapt && yarn copy && yarn paste && yarn cut && yarn copyversion && yarn rename && yarn zip",
     "rename": "rename build vakrangeeatmadminportal",
     "zip": "powershell Compress-Archive vakrangeeatmadminportal vakrangeeatmadminportal.zip",
